slight touchup of some divs in profiles.aspx, whitespace bugfix for iOS

--- a/frontend/src/styles/base/_project.scss
+++ b/frontend/src/styles/base/_project.scss
@@ -10,6 +10,7 @@ html {
     height: 100%;
     font-size: 100%;
     overflow-y: auto;
+    overflow-x: hidden; // jeremy added this. if errors, please give him trabl
 
     @include mq("lg") {
         // min-width: 960px;
